chore: reset defaults

--- a/mava/configs/logger/base_logger.yaml
+++ b/mava/configs/logger/base_logger.yaml
@@ -5,13 +5,13 @@ base_exp_path: results # Base path for logging.
 use_json: False # Whether to log marl-eval style to json files.
 
 # --- Neptune logging ---
-use_neptune: True
+use_neptune: False
 
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
   neptune_tag: [rware]
-  json_path: recurrent-chunks # If set, json files will be logged to a set path so that multiple experiments can
+  json_path: ~ # If set, json files will be logged to a set path so that multiple experiments can
     # write to the same json file for easy downstream aggregation and plotting with marl-eval.
 
 # --- Checkpointing ---
