--- a/mava/configs/logger/rec_mappo.yaml
+++ b/mava/configs/logger/rec_mappo.yaml
@@ -1,9 +1,9 @@
 defaults:
     - base_logger
 
-system_name: rec_mappo_chunks
+system_name: rec_mappo
 
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [rec-mappo, smax, benchmark, win-rate]
+  neptune_tag: [rec-mappo, smax, sweep]
