--- a/mava/configs/logger/base_logger.yaml
+++ b/mava/configs/logger/base_logger.yaml
@@ -2,16 +2,16 @@
 
 use_tf: False # Whether to use tensorboard logging.
 base_exp_path: results # Base path for logging.
-use_json: False # Whether to log marl-eval style to json files.
+use_json: True # Whether to log marl-eval style to json files.
 
 # --- Neptune logging ---
-use_neptune: False
+use_neptune: True
 
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
   neptune_tag: [rware]
-  json_path: ~ # If set, json files will be logged to a set path so that multiple experiments can
+  json_path: 27m_vs_30m # If set, json files will be logged to a set path so that multiple experiments can
     # write to the same json file for easy downstream aggregation and plotting with marl-eval.
 
 # --- Checkpointing ---
