--- a/mava/configs/logger/rec_mappo.yaml
+++ b/mava/configs/logger/rec_mappo.yaml
@@ -6,4 +6,4 @@ system_name: rec_mappo
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [rec-mappo, rware]
+  neptune_tag: [rec-mappo, smax, sweep]
