--- a/mava/configs/system/rec_ippo.yaml
+++ b/mava/configs/system/rec_ippo.yaml
@@ -25,11 +25,17 @@ max_grad_norm: 0.5 # Maximum norm of the gradients for a weight update.
 actor_network:
   use_layer_norm: True
   activation: "relu"
-  pre_torso_layer_sizes: [128]
-  post_torso_layer_sizes: [128]
+  pre_torso_layer_sizes: [256]
+  post_torso_layer_sizes: [256]
 
 critic_network:
   use_layer_norm: False
   activation: "relu"
-  pre_torso_layer_sizes: [128]
-  post_torso_layer_sizes: [128]
+  pre_torso_layer_sizes: [256]
+  post_torso_layer_sizes: [256]
+
+# --- To be defined during training ---
+num_agents: ~
+num_actions: ~
+num_updates_per_eval: ~
+total_timesteps: ~
