--- a/mava/configs/system/rec_mappo.yaml
+++ b/mava/configs/system/rec_mappo.yaml
@@ -1,5 +1,6 @@
 # --- Defaults REC-MAPPO ---
-
+total_timesteps: ~ # Set the total environment steps.
+#If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
 num_updates: 1000 # Number of updates
 seed: 42
 
