--- a/mava/configs/env/gym_rware.yaml
+++ b/mava/configs/env/gym_rware.yaml
@@ -5,4 +5,4 @@ env_name: gym:rware-v1
 # Possible scenarios:
 # rware-tiny-2ag-v1 | rware-tiny-4ag-v1 | rware-tiny-4ag-easy-v1 | rware-small-4ag-v1
 scenario: rware-tiny-2ag-v1
-kwargs: {}  # empty for now...
+use_individual_rewards: False  # If True, use the list of individual rewards.
