--- a/mava/configs/logger/ff_ippo.yaml
+++ b/mava/configs/logger/ff_ippo.yaml
@@ -6,4 +6,4 @@ system_name: ff_ippo
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [ff-ippo, test-logger]
+  neptune_tag: [ff-ippo, rware]
