feat: impr nv attributes

--- a/mava/configs/env/rware.yaml
+++ b/mava/configs/env/rware.yaml
@@ -1,3 +1,6 @@
 # ---Environment Configs---
+defaults:
+  - _self_
+
 env_name: RobotWarehouse-v0
 scenario: tiny-2ag # [tiny-2ag, tiny-4ag, tiny-4ag-easy, small-4ag]
