--- a/mava/configs/env/lbf.yaml
+++ b/mava/configs/env/lbf.yaml
@@ -1,7 +1,12 @@
 # ---Environment Configs---
+defaults:
+  - _self_
+
 env_name: LevelBasedForaging-v0
-scenario: 2s-8x8-2p-2f-coop # [2s-8x8-2p-2f-coop, 8x8-2p-2f-coop, 2s-10x10-3p-3f, 10x10-3p-3f, 15x15-4p-3f, 15x15-4p-5f]
+scenario: lbforaging:Foraging-2s-8x8-2p-2f-coop-v1 # scenario: lbforaging:lbforaging-<type_scenario>-v1
+
+# <type_scenario>: [2s-8x8-2p-2f-coop, 8x8-2p-2f-coop, 2s-10x10-3p-3f, 10x10-3p-3f, 15x15-4p-3f, 15x15-4p-5f]
 
 # Choose whether to aggregate the list of individual rewards and use the team reward (default setting) OR use_individual_rewards=True.
 use_individual_rewards: False  # If True, use the list of individual rewards.
-env_source: "jumanji" # ["jumanji", "gym"]
+env_source: jumanji  # [gym,jumanji]
