--- a/mava/configs/env/smax.yaml
+++ b/mava/configs/env/smax.yaml
@@ -5,8 +5,7 @@ defaults:
 env_name: HeuristicEnemySMAX
 # Possible scenarios:
 # 2s3z | 3s5z | 5m_vs_6m | 10m_vs_11m | 27m_vs_30m | 3s5z_vs_3s6z | 3s_vs_5z | 6h_vs_8z | smacv2_5_units | smacv2_10_units | smacv2_20_units
-scenario:
-  task_name: 2s3z
+scenario: 2s3z
 
 kwargs:
   see_enemy_actions: True # Whether to enable enemy vision. If True, the enemy will be able to see the actions of the agent.
