--- a/mava/configs/defaults.yaml
+++ b/mava/configs/defaults.yaml
@@ -1,3 +1,15 @@
+defaults:
+  - arch: anakin
+  - env: rware
+  # - system: ff_ippo # TODO: This will be helpful for using one main program and choose which algorithm.
+  # - network: mlp
+
+
+# Defaults for all systems
+system:
+  num_updates: 1000 # Number of updates
+  seed: 42
+
 # --- Logging options ---
 
 use_tf: False # Whether to use tensorboard logging.
@@ -10,7 +22,7 @@ use_neptune: False
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [rware]
+  neptune_tag: [rware] # The system name will be added automatically.
   json_path: ~ # If set, json files will be logged to a set path so that multiple experiments can
     # write to the same json file for easy downstream aggregation and plotting with marl-eval.
 
