--- a/mava/configs/system/ff_ippo.yaml
+++ b/mava/configs/system/ff_ippo.yaml
@@ -1,7 +1,8 @@
 # --- Defaults FF-IPPO ---
+system_name: ff_ippo
+network_name: mlp
 
-num_updates: 1000 # Number of updates
-seed: 42
+#num_updates: 1000 # Override the default num_updates
 
 # --- Agent observations ---
 add_agent_id: True
