--- a/mava/configs/env/rware.yaml
+++ b/mava/configs/env/rware.yaml
@@ -4,3 +4,6 @@ defaults:
   - scenario: tiny-2ag # [tiny-2ag, tiny-4ag, tiny-4ag-easy, small-4ag]
 
 env_name: RobotWarehouse-v0
+
+kwargs:
+  time_limit: 100
