--- a/mava/configs/logger/base_logger.yaml
+++ b/mava/configs/logger/base_logger.yaml
@@ -10,6 +10,7 @@ use_neptune: False  # Whether to log to neptune.ai.
 kwargs:
   neptune_project: Instadeep/Mava
   neptune_tag: [rware]
+  detailed_neptune_logging: False  # having mean/std/min/max can clutter neptune so we make it optional
   json_path: ~ # If set, json files will be logged to a set path so that multiple experiments can
     # write to the same json file for easy downstream aggregation and plotting with marl-eval.
 
