--- a/mava/configs/defaults.yaml
+++ b/mava/configs/defaults.yaml
@@ -1,41 +1,5 @@
 defaults:
   - arch: anakin
   - env: rware
-# The second option is to change the system name here each time before executing its 'system.py' file (and add the network config to the default system.yaml).
-# This also frees up additional code in the system.py files
- # - system: ff_ippo
-
-
-# Defaults for all systems
-system:
-  num_updates: 1000 # Number of updates
-  seed: 42
-
-# --- Logging options ---
-
-use_tf: False # Whether to use tensorboard logging.
-base_exp_path: results # Base path for logging.
-use_json: False # Whether to log marl-eval style to json files.
-
-# --- Neptune logging ---
-use_neptune: False
-
-# --- Other logger kwargs ---
-kwargs:
-  neptune_project: Instadeep/Mava
-  neptune_tag: [rware] # The system name will be added automatically if 'use_neptune is True' .
-  json_path: ~ # If set, json files will be logged to a set path so that multiple experiments can
-    # write to the same json file for easy downstream aggregation and plotting with marl-eval.
-
-# --- Checkpointing ---
-checkpointing:
-  save_model: False # Whether to save model checkpoints.
-  save_args:
-    save_interval_steps: 1 # Number of steps between saving checkpoints.
-    max_to_keep: 1 # Maximum number of checkpoints to keep.
-    keep_period: ~ # Don't delete any checkpoint where step % keep_period == 0
-    checkpoint_uid: ~ # Unique identifier for checkpoint to save. Defaults to timestamp
-
-  load_model: False # Whether to load model checkpoints.
-  load_args:
-    checkpoint_uid: "" # Unique identifier for checkpoint to load.
+  - system: ff_ippo  # Change the system name before running the `system.py` file OR run `python system_name.py system=system_name`.
+  - logging
