--- a/mava/configs/system/rec_mappo.yaml
+++ b/mava/configs/system/rec_mappo.yaml
@@ -1,8 +1,8 @@
 # --- Defaults REC-MAPPO ---
+defaults:
+  - network: rnn
+
 system_name: rec_mappo
-network_name: rnn
-total_timesteps: ~ # Set the total environment steps.
-# If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
 
 # --- Agent observations ---
 add_agent_id: True
