--- a/mava/configs/system/ff_ippo.yaml
+++ b/mava/configs/system/ff_ippo.yaml
@@ -1,6 +1,6 @@
 # --- Defaults FF-IPPO ---
 
-total_timesteps: ~ # Set the total environment steps.
+total_timesteps: 300000000 # Set the total environment steps.
 # If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
 num_updates: 1000 # Number of updates
 seed: 42
