fix: fix the vmap axis

--- a/mava/configs/default_rec_ippo.yaml
+++ b/mava/configs/default_rec_ippo.yaml
@@ -3,5 +3,5 @@ defaults:
   - arch: anakin
   - system: rec_ippo
   - network: rnn_continuous   # [rnn, rnn_continuous]
-  - env: rware
+  - env: mabrax
   - _self_
