--- a/mava/configs/default_rec_mappo.yaml
+++ b/mava/configs/default_rec_mappo.yaml
@@ -3,5 +3,5 @@ defaults:
   - arch: anakin
   - system: rec_mappo
   - network: rnn_continuous    # [rnn, rnn_continuous]
-  - env: rware
+  - env: mabrax
   - _self_
