--- a/mava/configs/default_rec_ippo.yaml
+++ b/mava/configs/default_rec_ippo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: rec_ippo
   - arch: anakin
   - system: rec_ippo
-  - network: rnn_continuous   # [rnn, rnn_continuous]
+  - network: rnn
   - env: mabrax
   - _self_
