--- a/mava/configs/default_rec_mappo.yaml
+++ b/mava/configs/default_rec_mappo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: rec_mappo
   - arch: anakin
   - system: rec_mappo
-  - network: rnn_continuous    # [rnn, rnn_continuous]
+  - network: rnn
   - env: mabrax
   - _self_
