--- a/mava/configs/env/mabrax.yaml
+++ b/mava/configs/env/mabrax.yaml
@@ -2,13 +2,15 @@
 defaults:
   - _self_
 
-env_name: halfcheetah_6x1 # env_name = task_name
-# Possible scenarios: ant_4x2 | halfcheetah_6x1 | hopper_3x1 | humanoid_9|8 | walker2d_2x3
+# Possible envs: [ant_4x2, halfcheetah_6x1, hopper_3x1, humanoid_9|8, walker2d_2x3]
+env_name: ant_4x2
 scenario:
-  task_name: halfcheetah_6x1
+  task_name: ant_4x2  # In this case: env_name = task_name
 
 kwargs:
   episode_length: 1000
-  homogenisation_method: max # Use homegenous dimensions for observations and actions (use the max dim + padding with 0)
+  homogenisation_method: None # Default: None. [max, concat] if the dims of observations and actions are not homegenous across agents.
+  # Homogeneous tasks : ant_4x2, walker2d_2x3
+  auto_reset: False # Default=True
 
-actions_type: continuous # The type of actions used in this env (Suggestion: use/update the mlp_continuous.yaml in this case).
+actions_type: continuous # The type of actions used in this env (Note: use the mlp_continuous.yaml in this case).
