--- a/mava/configs/network/mlp.yaml
+++ b/mava/configs/network/mlp.yaml
@@ -2,9 +2,9 @@
 actor_network:
   layer_sizes: [128, 128]
   use_layer_norm: True
-  activation: "relu"
+  activation: "tanh"
 
 critic_network:
   layer_sizes: [128, 128]
   use_layer_norm: False
-  activation: "relu"
+  activation: "tanh"
