feat: rename SAC file and add hydra config

--- a/mava/configs/logger/ff_isac.yaml
+++ b/mava/configs/logger/ff_isac.yaml
@@ -6,4 +6,4 @@ system_name: ff_isac
 # --- Neptune options ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [ff-isac, rware]
+  neptune_tag: [ff-isac, mabrax]
