--- a/mava/configs/default_ff_mappo.yaml
+++ b/mava/configs/default_ff_mappo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: ff_mappo
   - arch: anakin
   - system: ff_mappo
-  - network: mlp
+  - network: mlp # mlp_continuous if actions are continuous.
   - env: mabrax
   - _self_
