--- a/mava/configs/default_rec_ippo.yaml
+++ b/mava/configs/default_rec_ippo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: rec_ippo
   - arch: anakin
   - system: rec_ippo
-  - network: rnn
+  - network: rnn # rnn_continuous if actions are continuous.
   - env: mabrax
   - _self_
