--- a/mava/configs/network/rnn_continuous.yaml
+++ b/mava/configs/network/rnn_continuous.yaml
@@ -1,12 +1,12 @@
 # ---Recurrent Structure Networks---
 actor_network:
   use_layer_norm: True
-  activation: "relu"
+  activation: "tanh"
   pre_torso_layer_sizes: [128]
   post_torso_layer_sizes: [128]
 
 critic_network:
   use_layer_norm: False
-  activation: "relu"
+  activation: "tanh"
   pre_torso_layer_sizes: [128]
   post_torso_layer_sizes: [128]
