--- a/mava/configs/default_ff_ippo.yaml
+++ b/mava/configs/default_ff_ippo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: ff_ippo
   - arch: anakin
   - system: ff_ippo
-  - network: mlp # mlp_continuous if actions are continuous.
+  - network: mlp
   - env: rware
   - _self_
