--- a/mava/configs/default_rec_mappo.yaml
+++ b/mava/configs/default_rec_mappo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: rec_mappo
   - arch: anakin
   - system: rec_mappo
-  - network: rnn # rnn_continuous if actions are continuous.
-  - env: mabrax
+  - network: rnn
+  - env: rware
   - _self_
