--- a/mava/configs/system/ff_isac.yaml
+++ b/mava/configs/system/ff_isac.yaml
@@ -1,6 +1,6 @@
 # --- Defaults FF-ISAC ---
 seed: 1
-n_envs: 256 # number of environments to run in parallel (vmapped)
+n_envs: 128 # number of environments to run in parallel (vmapped)
 
 # --- Agent observations ---
 add_agent_id: True
@@ -9,17 +9,19 @@ add_agent_id: True
 # step related
 total_timesteps: 3e8
 explore_steps: 5000  # number of steps to take with random actions at the start of training
-act_steps: 1  # number of steps to take in the environment before learning
-learn_steps: 1  # number of times to sample and train before acting again
-policy_frequency: 2  # the frequency of training policy - every n q learning steps the policy is trained once
+act_steps: 2  # number of steps to take in the environment before learning
+learn_steps: 2  # number of times to sample and train before acting again
+policy_frequency: 4  # the frequency of training policy - every n q learning steps the policy is trained once
 # sizes
 buffer_size: 1000000  # size of the replay buffer. Note: total size is this * num_devices
-batch_size: 128
+batch_size: 64
 # learning rates
 policy_lr: 3e-4  # the learning rate of the policy network optimizer
 q_lr: 1e-3  # the learning rate of the Q network network optimizer
 # other
 tau: 0.005  # smoothing coefficient for target networks
 gamma: 0.99  # discount factor
-target_entropy_scale: 6.0  # scale factor for target entropy
 
+autotune: False  # whether to autotune alpha
+target_entropy_scale: 5.0  # scale factor for target entropy (when auto-tuning)
+init_alpha: 0.1  # initial entropy value when not using autotune
