--- a/mava/configs/env/mabrax.yaml
+++ b/mava/configs/env/mabrax.yaml
@@ -9,8 +9,7 @@ scenario:
 
 kwargs:
   episode_length: 1000
-  homogenisation_method: max # [None, max, concat] if the dims of observations and actions are not homegenous across agents.
-  # Homogeneous tasks: ant_4x2, walker2d_2x3 -> "homogenisation_method: None"
-  auto_reset: True
+  homogenisation_method: None #Default is None. [max, concat] if the dims of observations and actions are not homegenous across agents.
+  # Note: "max" adds one-hot for the agent's ID. Homogeneous tasks: ant_4x2, walker2d_2x3
 
 actions_type: continuous # The type of actions used in this env (Note: use the mlp_continuous.yaml in this case).
