--- a/mava/configs/default_ff_isac.yaml
+++ b/mava/configs/default_ff_isac.yaml
@@ -3,7 +3,7 @@ defaults:
   - logger: ff_isac
   - arch: anakin
   - system: ff_isac
-  - env: mabrax
+  - env: smax
 #   - system/search_spaces@hydra.sweeper.params: ${system}
 #   - override hydra/sweeper: optuna
 #   - override hydra/sweeper/sampler: tpe
