Add return metrics for experiments and corresponding Hydra config option
Modifies the run_experiment method and hydra_entry_point in the various systems to return a metric to be used for hyperparameter tuning through Hydra (using something like OpTuna). The Hydra config option, config.env.eval_metric,is used to select the metric (episode_return or win_rate) for an environment.

--- a/mava/configs/env/lbf.yaml
+++ b/mava/configs/env/lbf.yaml
@@ -8,5 +8,9 @@ env_name: LevelBasedForaging-v0
 # Choose whether to aggregate the list of individual rewards and use the team reward (default setting) OR use_individual_rewards=True.
 use_individual_rewards: False  # If True, use the list of individual rewards.
 
+# Defines the metric that will be used to evaluate the performance of the agent.
+# This metric is returned at the end of an experiment and can be used for hyperparameter tuning.
+eval_metric: episode_return
+
 kwargs:
   time_limit: 100
