--- a/mava/configs/env/rware.yaml
+++ b/mava/configs/env/rware.yaml
@@ -5,5 +5,9 @@ defaults:
 
 env_name: RobotWarehouse-v0
 
+# Defines the metric that will be used to evaluate the performance of the agent.
+# This metric is returned at the end of an experiment and can be used for hyperparameter tuning.
+eval_metric: episode_return
+
 kwargs:
   time_limit: 500
