--- a/mava/configs/env/smax.yaml
+++ b/mava/configs/env/smax.yaml
@@ -8,6 +8,10 @@ env_name: HeuristicEnemySMAX
 scenario:
   task_name: 2s3z
 
+# Defines the metric that will be used to evaluate the performance of the agent.
+# This metric is returned at the end of an experiment and can be used for hyperparameter tuning.
+eval_metric: win_rate
+
 kwargs:
   see_enemy_actions: True # Whether to enable enemy vision. If True, the enemy will be able to see the actions of the agent.
   walls_cause_death: True # Whether to kill the agent if it collides with a wall.
