--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,6 +2,7 @@ colorama
 distrax @ git+https://github.com/google-deepmind/distrax  # distrax release doesn't support jax > 0.4.13
 flashbax~=0.1.0
 flax~=0.7.5
+gigastep @ git+https://github.com/mlech26l/gigastep
 hydra-core==1.3.2
 jax
 jaxlib
@@ -13,3 +14,4 @@ omegaconf
 optax
 protobuf~=3.20
 tensorboard_logger
+type_enforced
