changes based on reviews

--- a/mava/configs/env/smax.yaml
+++ b/mava/configs/env/smax.yaml
@@ -2,8 +2,8 @@
 defaults:
   - _self_
 
-env_name: SMAX
-# Possible scenarios:
+env_name: Smax
+# Possible tasks:
 # 2s3z | 3s5z | 5m_vs_6m | 10m_vs_11m | 27m_vs_30m | 3s5z_vs_3s6z | 3s_vs_5z | 6h_vs_8z | smacv2_5_units | smacv2_10_units | smacv2_20_units
 scenario:
   name: HeuristicEnemySMAX
