--- a/mava/configs/env/scenario/2s-8x8-2p-2f-coop.yaml
+++ b/mava/configs/env/scenario/2s-8x8-2p-2f-coop.yaml
@@ -1,4 +1,5 @@
 # The config of the 2s-8x8-2p-2f-coop scenario with the VectorObserver set as default.
+name: LevelBasedForaging-v0
 task_name: 2s-8x8-2p-2f-coop
 
 task_config:
