--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,7 +7,7 @@ jax
 jaxlib
 jaxmarl
 jumanji @ git+https://github.com/sash-a/jumanji
-matrax
+matrax @ git+https://github.com/instadeepai/matrax
 neptune
 numpy
 omegaconf
