chore: clean up and fix todos

--- a/mava/configs/system/ff_isac.yaml
+++ b/mava/configs/system/ff_isac.yaml
@@ -1,6 +1,6 @@
 # --- Defaults FF-ISAC ---
 seed: 1
-n_envs: 128 # number of environments to run in parallel (vmapped)
+n_envs: 16 # number of environments to run in parallel (vmapped)
 
 # --- Agent observations ---
 add_agent_id: True
@@ -9,18 +9,22 @@ add_agent_id: True
 # step related
 total_timesteps: 3e8
 explore_steps: 5000  # number of steps to take with random actions at the start of training
-update_batch_size: 2 # Number of vectorised gradient updates per device.
+update_batch_size: 1 # number of vectorised gradient updates per device.
 
-rollout_length: 2 # Number of environment steps per vectorised environment.
-epochs: 1 # Number of learn epochs per training data batch.
+rollout_length: 1 # number of environment steps per vectorised environment.
+epochs: 1 # number of learn epochs per training data batch.
 policy_frequency: 4  # the frequency of training policy - every n q learning steps the policy is trained once
+
 # sizes
 buffer_size: 1000000  # size of the replay buffer. Note: total size is this * num_devices
 batch_size: 64
+
 # learning rates
 policy_lr: 3e-4  # the learning rate of the policy network optimizer
 q_lr: 1e-3  # the learning rate of the Q network network optimizer
-# other
+alpha_lr: 13e-4  # the learning rate of the alpha optimizer
+
+# SAC specific
 tau: 0.005  # smoothing coefficient for target networks
 gamma: 0.99  # discount factor
 
