--- a/mava/configs/env/scenario/waypoint_5_vs_5.yaml
+++ b/mava/configs/env/scenario/waypoint_5_vs_5.yaml
@@ -4,7 +4,7 @@ team_1:
   default: 5
 kwargs:
   damage_cone_depth: 0.0
-  episode_ends_one_team_dead: True
+  episode_ends_one_team_dead: False
   max_episode_length: 500
   enable_waypoints: true
   reward_game_won: 0
