--- a/mava/configs/env/scenario/waypoint_5_vs_5.yaml
+++ b/mava/configs/env/scenario/waypoint_5_vs_5.yaml
@@ -1,18 +1,22 @@
-team_0:
-  default: 5
-team_1:
-  default: 5
-kwargs:
-  damage_cone_depth: 0.0
-  episode_ends_one_team_dead: False
-  max_episode_length: 500
-  enable_waypoints: true
-  reward_game_won: 0
-  reward_defeat_one_opponent: 0
-  reward_detection: 0
-  reward_damage: 0
-  reward_idle: 0
-  reward_agent_disabled: 0
-  reward_collision_agent: 0
-  reward_collision_obstacle: 0
-  reward_hit_waypoint: 50
+name: Gigastep
+task_name: waypoint_5_vs_5
+
+task_config:
+  team_0:
+    default: 5
+  team_1:
+    default: 5
+  kwargs:
+    damage_cone_depth: 0.0
+    episode_ends_one_team_dead: False
+    max_episode_length: 500
+    enable_waypoints: true
+    reward_game_won: 0
+    reward_defeat_one_opponent: 0
+    reward_detection: 0
+    reward_damage: 0
+    reward_idle: 0
+    reward_agent_disabled: 0
+    reward_collision_agent: 0
+    reward_collision_obstacle: 0
+    reward_hit_waypoint: 50
