Bug fix in Q-learning loss.

--- a/mava/configs/system/ff_idqn.yaml
+++ b/mava/configs/system/ff_idqn.yaml
@@ -1,4 +1,4 @@
-# --- Defaults FF-ISAC ---
+# --- Defaults FF-IDQN ---
 seed: 1
 n_envs: 128 # number of environments to run in parallel (vmapped)
 
@@ -12,17 +12,17 @@ buffer_min_size: 132  # number of steps to take with random actions at the start
 update_batch_size: 2 # Number of vectorised gradient updates per device.
 
 rollout_length: 2 # Number of environment steps per vectorised environment.
-epochs: 2 # Number of learn epochs per training data batch.
+epochs: 4 # Number of learn epochs per training data batch.
 
 # sizes
 buffer_size: 100_000  # size of the replay buffer. Note: total size is this * num_devices
 batch_size: 32 #as in jaxmarl paper
 # learning rates
-q_lr: 1e-3  # the learning rate of the Q network network optimizer
+q_lr: 3e-4  # the learning rate of the Q network network optimizer
 # other
-tau: 0.005  # smoothing coefficient for target networks
+tau: 0.05  # smoothing coefficient for target networks
 gamma: 0.99  # discount factor
 
 eps_min: 0.05
-eps_decay: 1e6
+eps_decay: 4e5
 
