--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,8 +3,8 @@ distrax @ git+https://github.com/google-deepmind/distrax  # distrax release does
 flashbax~=0.1.0
 flax~=0.7.5
 hydra-core==1.3.2
-jax
-jaxlib
+jax==0.4.21
+jaxlib==0.4.21
 jaxmarl
 jumanji @ git+https://github.com/sash-a/jumanji
 neptune
