--- a/mava/configs/system/ff_ippo.yaml
+++ b/mava/configs/system/ff_ippo.yaml
@@ -6,7 +6,7 @@ num_updates: 1000 # Number of updates
 seed: 42
 
 # --- Agent observations ---
-add_ids_to_agent_view: True # Whether or not to add the agent IDs to agent view.
+add_agent_id: True
 
 # --- RL hyperparameters ---
 actor_lr: 2.5e-4 # Learning rate for actor network
