--- a/mava/configs/env/scenario/hide_and_seek_5_vs_5_pobs.yaml
+++ b/mava/configs/env/scenario/hide_and_seek_5_vs_5_pobs.yaml
@@ -1,6 +1,6 @@
 name: Gigastep
-task_name: hide_and_seek_5_vs_5
-
+task_name: hide_and_seek_5_vs_5_pobs
+#the teams must be made up of hider/seeker agents
 task_config:
   team_0:
     seeker: 5
@@ -13,9 +13,14 @@ task_config:
     collision_range: 0.0
     reward_game_won: 50
     reward_defeat_one_opponent: 5
-    reward_detection: 0
     reward_damage: 10
     reward_idle: 0
     reward_agent_disabled: 10
     reward_collision_agent: 0
     reward_collision_obstacle: 10
+    #to make it partially observable
+    use_stochastic_obs : False
+    use_stochastic_comm: False
+    cone_depth : 100
+    cone_angle : 6.28318530718
+    reward_detection : 0
