--- a/mava/configs/env/scenario/waypoint_5_vs_5_pobs.yaml
+++ b/mava/configs/env/scenario/waypoint_5_vs_5_pobs.yaml
@@ -1,6 +1,6 @@
 name: Gigastep
-task_name: waypoint_5_vs_5
-
+task_name: waypoint_5_vs_5_pobs
+#the enable_waypoints in the kwargs must be set to True and the reward_hit_waypoint should be higher than 0.
 task_config:
   team_0:
     default: 5
@@ -13,10 +13,15 @@ task_config:
     enable_waypoints: true
     reward_game_won: 0
     reward_defeat_one_opponent: 0
-    reward_detection: 0
     reward_damage: 0
     reward_idle: 0
     reward_agent_disabled: 0
     reward_collision_agent: 0
     reward_collision_obstacle: 0
     reward_hit_waypoint: 50
+    #to make it partially observable
+    use_stochastic_obs : False
+    use_stochastic_comm: False
+    cone_depth : 100
+    cone_angle : 6.28318530718
+    reward_detection : 0
