fix: fixed the fobs and pobs mixup + typos/comments

--- a/mava/configs/env/gigastep.yaml
+++ b/mava/configs/env/gigastep.yaml
@@ -1,5 +1,5 @@
 # ---Environment Configs---
-#_pobs makes the environment partially observable, _fobs makes the environment fully observable
+#`_pobs` and `_fobs` stand for partially observable and fully observable environment respectively.
 defaults:
   - _self_
   - scenario: hide_and_seek_5_vs_5_pobs # [hide_and_seek_5_vs_5_fobs, hide_and_seek_5_vs_5_pobs, waypoint_5_vs_5_fobs, waypoint_5_vs_5_pobs]
@@ -8,7 +8,8 @@ env_name: Gigastep
 
 eval_metric: win_rate
 
+# Currently we only support discrete actions and vector observations.
 kwargs:
-  max_episode_length: 500 #equivalent to time_limit
-  discrete_actions : True
-  obs_type : vector # options: rgb, vector, rgb_vector)
+   max_episode_length: 500
+  discrete_actions: True 
+  obs_type : vector # Options: [vector, rgb, rgb_vector]
