--- a/mava/configs/default_rec_ippo.yaml
+++ b/mava/configs/default_rec_ippo.yaml
@@ -1,7 +1,7 @@
 defaults:
   - logger: rec_ippo
   - arch: anakin
-  - system: rec_ippo
+  - system: ppo/rec_ippo
   - network: rnn
   - env: rware
   - _self_
