--- a/mava/configs/default_rec_mappo.yaml
+++ b/mava/configs/default_rec_mappo.yaml
@@ -1,7 +1,7 @@
 defaults:
   - logger: rec_mappo
   - arch: anakin
-  - system: rec_mappo
+  - system: ppo/rec_mappo
   - network: rnn
   - env: rware
   - _self_
