--- a/mava/configs/default_rec_idqn.yaml
+++ b/mava/configs/default_rec_idqn.yaml
@@ -3,7 +3,7 @@ defaults:
   - logger: rec_idqn
   - arch: anakin
   - system: rec_idqn
-  - env: lbf
+  - env: smax
 #   - system/search_spaces@hydra.sweeper.params: ${system}
 #   - override hydra/sweeper: optuna
 #   - override hydra/sweeper/sampler: tpe
