--- a/mava/configs/system/ff_isac.yaml
+++ b/mava/configs/system/ff_isac.yaml
@@ -16,8 +16,8 @@ epochs: 1 # number of learn epochs per training data batch.
 policy_frequency: 4  # the frequency of training policy - every n q learning steps the policy is trained once
 
 # sizes
-buffer_size: 1000000  # size of the replay buffer. Note: total size is this * num_devices
-batch_size: 64
+buffer_size: 500000  # size of the replay buffer. Note: total size is this * num_devices
+batch_size: 32
 
 # learning rates
 policy_lr: 3e-4  # the learning rate of the policy network optimizer
